--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@momentum-ui/core/css/momentum-ui.min.css"
             ],
             "scripts": []
           },
